[gd_scene load_steps=27 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://scenes/bolt.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/helm.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/ray.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/storm.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/flare.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/magic_circle.tscn" type="PackedScene" id=7]
[ext_resource path="res://scenes/blood.tscn" type="PackedScene" id=8]
[ext_resource path="res://assets/player/head.png" type="Texture" id=9]
[ext_resource path="res://assets/terrain/shadow.png" type="Texture" id=10]
[ext_resource path="res://assets/weapon/Xbow2.png" type="Texture" id=11]
[ext_resource path="res://assets/weapon/bolt.png" type="Texture" id=12]
[ext_resource path="res://assets/weapon/shield.png" type="Texture" id=13]
[ext_resource path="res://assets/blood_wo.png" type="Texture" id=14]
[ext_resource path="res://assets/UI/glassPanel.png" type="Texture" id=15]
[ext_resource path="res://assets/sounds/SFX/wood.wav" type="AudioStream" id=16]
[ext_resource path="res://assets/sounds/SFX/player_grunt.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sounds/SFX/impact.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/Fire Particle.png" type="Texture" id=19]
[ext_resource path="res://assets/terrain/point.png" type="Texture" id=20]
[ext_resource path="res://assets/player/aura good.png" type="Texture" id=21]

[sub_resource type="CircleShape2D" id=1]
radius = 17.8208

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4.05469, 14.8127 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.960603, 0.440788 ), -0.738559, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=4]
curve = SubResource( 3 )

[sub_resource type="ParticlesMaterial" id=5]
flag_disable_z = true
gravity = Vector3( 0, -98, 0 )
angular_velocity = -7.07166e-39
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.6
scale_curve = SubResource( 4 )

[node name="player" type="Node2D"]
scale = Vector2( 1.15, 1.15 )
script = ExtResource( 1 )
Bolt = ExtResource( 2 )
Helm = ExtResource( 3 )
Ray = ExtResource( 4 )
Storm = ExtResource( 5 )
Flare = ExtResource( 6 )
Circle = ExtResource( 7 )
Blood = ExtResource( 8 )

[node name="body" type="Area2D" parent="."]

[node name="Sprite" type="Sprite" parent="body"]
rotation = -1.5708
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )
offset = Vector2( -0.396421, 1.07845 )

[node name="shadow" type="Sprite" parent="body/Sprite"]
modulate = Color( 1, 1, 1, 0.823529 )
scale = Vector2( 0.25, 0.25 )
z_index = -1
texture = ExtResource( 10 )

[node name="aura" type="Sprite" parent="body/Sprite"]
visible = false
modulate = Color( 0.941176, 0.611765, 0.258824, 1 )
position = Vector2( -0.648132, 1.29625 )
z_index = -1
texture = ExtResource( 21 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="body"]
visible = false
position = Vector2( -0.347942, 0.927856 )
shape = SubResource( 1 )

[node name="Xbow" type="Sprite" parent="."]
show_behind_parent = true
position = Vector2( 0, 25 )
rotation = 3.14159
scale = Vector2( 0.47, 0.47 )
texture = ExtResource( 11 )

[node name="bolt" type="Sprite" parent="Xbow"]
modulate = Color( 0.792157, 0.792157, 0.792157, 1 )
position = Vector2( 0, -30 )
rotation = 9.27183e-08
scale = Vector2( 0.8, 1.2 )
texture = ExtResource( 12 )

[node name="mark" type="Position2D" parent="Xbow/bolt"]
position = Vector2( 0, -10 )

[node name="shield" type="Area2D" parent="." groups=[
"shield",
]]
visible = false
z_index = 1
monitoring = false
monitorable = false

[node name="Sprite" type="Sprite" parent="shield"]
self_modulate = Color( 0.890196, 0.890196, 0.890196, 1 )
position = Vector2( 0, 32 )
rotation = -0.785398
scale = Vector2( 0.54, 0.54 )
texture = ExtResource( 13 )
offset = Vector2( 21.1414, -21.6266 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="shield"]
visible = false
polygon = PoolVector2Array( -28.3482, 3.8505, -37.7335, 6.79491, -31.2926, 30.7183, 0.0440826, 35.6036, 32.1963, 30.9023, 37.9011, 6.79491, 29.436, 4.21855, 23.5471, 22.2531, -0.00817871, 27.0378, -22.6433, 21.701 )

[node name="pwr_shield" type="Area2D" parent="." groups=[
"shield",
]]
visible = false
monitoring = false
monitorable = false

[node name="glow" type="Sprite" parent="pwr_shield"]

[node name="Sprite" type="Sprite" parent="pwr_shield/glow"]
modulate = Color( 0.294118, 0.788235, 0.866667, 0.705882 )
position = Vector2( -32.2637, -12.264 )
scale = Vector2( 2.08489, 5.95277 )
texture = ExtResource( 14 )

[node name="Sprite2" type="Sprite" parent="pwr_shield/glow"]
modulate = Color( 0.294118, 0.788235, 0.866667, 0.705882 )
position = Vector2( 31.6977, -13.0187 )
scale = Vector2( 1.94338, 5.76409 )
texture = ExtResource( 14 )

[node name="Sprite" type="Sprite" parent="pwr_shield"]
position = Vector2( 32, -13 )
rotation = 1.5708
scale = Vector2( 0.292673, 0.0754933 )
texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="pwr_shield"]
visible = false
position = Vector2( 32.075, -13.2074 )
shape = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="pwr_shield"]
position = Vector2( -32, -13 )
rotation = 1.5708
scale = Vector2( 0.292673, 0.0754933 )
texture = ExtResource( 15 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="pwr_shield"]
visible = false
position = Vector2( -32.0751, -13.2074 )
shape = SubResource( 2 )

[node name="HitTimer" type="Timer" parent="."]
wait_time = 0.4
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="UltTimer" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="PowerUpTimer" type="Timer" parent="."]
wait_time = 7.0
one_shot = true

[node name="shield_impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )
volume_db = -5.0
pitch_scale = 0.6
bus = "sfx"

[node name="grunt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )
volume_db = -5.0
pitch_scale = 1.1
bus = "sfx"

[node name="impact" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 18 )
volume_db = -5.0
bus = "sfx"

[node name="art_bloom" type="Sprite" parent="."]
modulate = Color( 0.607843, 0.0431373, 0.0431373, 0 )
show_behind_parent = true
scale = Vector2( 15, 15 )
z_index = -1
texture = ExtResource( 14 )

[node name="flame" type="Particles2D" parent="."]
visible = false
position = Vector2( -3.05176e-05, 41.8863 )
amount = 5
lifetime = 0.6
process_material = SubResource( 5 )
texture = ExtResource( 19 )

[node name="point" type="Sprite" parent="."]
visible = false
modulate = Color( 0.827451, 0.282353, 0.282353, 0.54902 )
position = Vector2( 0, 172 )
rotation = 3.14159
scale = Vector2( 1.2, 1.5 )
texture = ExtResource( 20 )
[connection signal="timeout" from="HitTimer" to="." method="_on_HitTimer_timeout"]
[connection signal="timeout" from="ReloadTimer" to="." method="_on_ReloadTimer_timeout"]
[connection signal="timeout" from="UltTimer" to="." method="_on_UltTimer_timeout"]
[connection signal="timeout" from="PowerUpTimer" to="." method="_on_PowerUpTimer_timeout"]
